# myagv_ROS2

./: .gitignore  mappy_save.pgm  mappy_save.yaml  mappy_serial.data  my_map_save.pgm  my_map_save.yaml  my_map_serial.data  turtlebot_map_serial.data
src/myagv/myagv/: CMakeLists.txt  package.xml
src/myagv/myagv/config/: gz_bridge.yaml  mapper_params_online_async.yaml  nav2_params.yaml
src/myagv/myagv/launch/: description.launch.py  gazebo.launch.py  myagv_sim.launch.py  nav2.launch.py  slam.launch.py
src/myagv/myagv/maps/: turtebot_map.pgm  turtebot_map.yaml
src/myagv/myagv/urdf/: mecanum_properties.urdf.xacro
src/myagv/myagv_base/: CMakeLists.txt  package.xml
src/myagv/myagv_bringup/launch/: bringup.launch.py  extra.launch.py  joy_teleop.launch.py
src/myagv/myagv_description/: CMakeLists.txt  package.xml
src/myagv/myagv_description/launch/: description.launch.py  visualize.launch.py
src/myagv/myagv_description/urdf/: mecanum_properties.urdf.xacro
src/myagv/myagv_gazebo/: colcon.pkg  package.xml  setup.cfg  setup.py
src/myagv/myagv_gazebo/config/: gz_bridge.yaml
src/myagv/myagv_gazebo/launch/: gazebo.launch.py
src/myagv/myagv_gazebo/myagv_gazebo/: command_timeout.py
src/myagv/myagv_navigation/: CMakeLists.txt
src/myagv/myagv_navigation/launch/: slam.launch.py
trash/myagv_bringup/: CMakeLists.txt  package.xml
trash/myagv_bringup/launch/: custom_robot.launch.py  default_robot.launch.py  depth.launch.py  sensors.launch.py
trash/myagv_navigation/: package.xml
trash/myagv_navigation/launch/: navigation.launch.py
(+8 files in other folders)
